# sentiovoice

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: api-unit-tests.yml  ui-unit-tests.yml
api/: .env.example  Dockerfile  function_app.py  prompts.yaml  pyproject.toml
api/src/: __init__.py  api.py
api/src/actions/: __init__.py  generate_feedback_response.py
api/src/clients/: __init__.py  azure_openai.py  azure_speech_synthesis.py  azure_text_analytics.py  client_errors.py
api/src/controllers/: get_audio.py  get_health.py  post_feedback.py
api/src/dtos/: __init__.py  feedback.py  health_response.py  sentiment_response.py
api/src/settings/: azure_ai_services.py  azure_openai.py  settings.py
api/src/utils/: prompt.py
api/test/actions/: test_generate_feedback_response.py
api/test/clients/: test_azure_openai.py  test_azure_speech_synthesis.py  test_azure_text_analytics.py
api/test/controllers/: test_get_audio.py  test_get_health.py  test_post_feedback.py
api/test/dtos/: test_feedback.py  test_health.py  test_sentiment_response.py
api/test/settings/: test_azure_ai_services.py  test_azure_openai.py  test_settings.py
api/test/utils/: test_prompt.py
ui/: .env.example  Dockerfile  pyproject.toml
ui/src/: api_client.py  app.py  audio.py  feedback.py  settings.py  ui.py
ui/test/: test_api_client.py  test_app.py  test_audio.py  test_feedback.py  test_settings.py  test_ui.py
