[tool.poetry]
name = "SentioVoice-API"
version = "0.1.0"
description = "SentioVoice API service"
authors = [
    "Manuel Jesús Escamilla <manueljesus@mjescamilla.com>"
]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
azure-functions = "^1.21.3"
fastapi = "^0.115.8"
langchain = {extras = ["openai"], version = "^0.3.18"}
langchain-openai = "^0.3.4"
azure-ai-textanalytics = "^5.3.0"
azure-cognitiveservices-speech = "^1.42.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.pytest.ini_options]
env = [
    "AZURE_OPENAI_API_KEY=test_openai_api_key",
    "AZURE_OPENAI_DEPLOYMENT=test_openai_deployment",
    "AZURE_OPENAI_MODEL=test_openai_model",
    "AZURE_OPENAI_API_VERSION=test_api_version",
    "AZURE_OPENAI_ENDPOINT=test_openai_endpoint",
    "AZURE_OPENAI_TEMPERATURE=0.7",
    "AZURE_OPENAI_MAX_TOKENS=50",
    "AZURE_AI_SERVICES_API_KEY=test_ai_services_api_key",
    "AZURE_AI_SERVICES_ENDPOINT=test_ai_services_endpoint",
    "AZURE_AI_SERVICES_REGION=test_ai_services_region"
]